feat: habit page

--- a/frontend/src/app/features/habits/pages/habits-page/habits-page.component.html
+++ b/frontend/src/app/features/habits/pages/habits-page/habits-page.component.html
@@ -3,6 +3,7 @@
     <p class="mt-2 text-lg text-gray-600 dark:text-gray-400">
         This is where your habits will be tracked.
     </p>
+    <app-habit-list></app-habit-list>
 </div>
 <!-- <div class="habits-page">
     <header class="page-header">
